--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+*{
+  font-family: 'Roboto', sans-serif;
+}
+
 .container {
   width: 1200px;
   margin: auto;
 }
 
-h1 {
-    display: inline;
-    border: 2px;
+header{
+  border-bottom: 2px solid #000000;
+}
+header h2{
+  font-size: 48px;
+  margin: 0;
+  font-weight :400;
 }
 
+.section h1{
+  z-index: 2;
+ 
+  width: 50%;
+  height: 100px;
+  }
+
+.left {
+  position: relative;
+  float: left;
+  margin-top: 50px;
+  width: 15%;
+  height: 400px;
+ 
+  margin-bottom: 10px;
+  }
+
+  .right {
+    position: relative;
+    float: right;
+    margin-top: 50px;
+    width: 88%;
+    height: 100px;
+    margin-bottom: 10px;
+    
+    }
+
+    #footer {
+      position: relative;
+      height: 50px;
+      clear: both;
+      font-family: Verdana, sans-serif;
+      font-size: 20px;
+      text-align: center;
+      color: #ffffff;
+    }
+
+    .right p{
+    float: right;
+    }
+
+    div h1{
+    float: right ;
+    height: auto 50px;
+      }
